examples/failing/unassigned_reg.gm
$t1 = spawn { nop; };
$t2 = spawn { join $t1; };
join $t2;
